Implemented inter-activity navigation

--- a/app/src/main/res/layout/activity_devs.xml
+++ b/app/src/main/res/layout/activity_devs.xml
@@ -4,39 +4,47 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.ItemDetailActivity">
+    tools:context=".activities.DevsActivity">
 
     <ImageView
-        android:id="@+id/logo_imageView_item_detail"
+        android:id="@+id/logo_imageView_devs"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/app_logo_desc"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/background_transparent" />
 
     <TextView
-        android:id="@+id/nav_textview_item_detail"
+        android:id="@+id/nav_textview_devs"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="28dp"
         android:layout_marginTop="28dp"
-        android:text="@string/nav_textview_item_detail_text"
+        android:text="@string/nav_textview_devs_text"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ListView
+        android:id="@+id/devs_listview"
+        android:layout_width="407dp"
+        android:layout_height="61dp"
+        android:layout_marginTop="156dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/logo_imageView_devs" />
+
     <Button
-        android:id="@+id/devs_btn_item_detail"
+        android:id="@+id/home_btn_devs"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="28dp"
-        android:text="@string/nav_textview_devs_text"
+        android:text="@string/nav_textview_main_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
