--- a/app/src/main/res/layout/activity_devs.xml
+++ b/app/src/main/res/layout/activity_devs.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.DevsActivity">
+    tools:context=".DevsActivity">
 
     <ImageView
         android:id="@+id/logo_imageView_devs"
@@ -30,11 +30,12 @@
 
     <ListView
         android:id="@+id/devs_listview"
-        android:layout_width="407dp"
-        android:layout_height="61dp"
-        android:layout_marginTop="156dp"
+        android:layout_width="350dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="96dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/logo_imageView_devs" />
 
